# tess-gaia-light-curve

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_aperture_photometry.py  test_cli.py  test_epsf.py  test_pyticdb_fixtures.py
tests/end_to_end/: test_full_pipeline.py
tests/sample_data/: README.md  __init__.py  download.py
tests/sample_data/databases/: 00_install_q3c.sql  Dockerfile  README.md  docker-compose.yml  dr2_to_dr3.csv  dr2_to_dr3.sql  gaia_source.sql  ticentries.csv  ticentries.sql
tests/test_utils/: test_cli.py  test_constants.py  test_logging.py  test_manifest.py  test_optional_deps.py  test_tess_ephemeris.py  test_tess_pointing.py  test_tess_pointings.py
tglc/: __init__.py  __main__.py  aperture_light_curve.py  aperture_photometry.py  cli.py  databases.py  effective_psf.py  epsf.py  ffi.py  ffi_cut.py  light_curve.py  mp_test.py  run.py  source_output.py  target_lightcurve.py
tglc/scripts/: catalogs.py  cutouts.py  epsfs.py  light_curves.py  make_catalogs.py  make_cutouts.py  make_epsfs.py  make_light_curves.py
tglc/util/: _optional_deps.py  cli.py  constants.py  logging.py  multiprocessing.py  tess_ephemeris.py  tess_pointings.py
tglc/util/data/: Year1-7_pointings_long.csv  Years1-8_pointings_long.csv
tglc/utils/: _optional_deps.py  constants.py  manifest.py  mapping.py  tess_ephemeris.py
tglc/utils/data/ephemerides/: plot_ephemerides.py
tutorials/: epsf_fit.ipynb
